--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -6,17 +6,17 @@
 
 @font-face {
     font-family: 'Avenir';
-    src: url('/fonts/Avenir.ttf');
+    src: url('../../fonts/Avenir.ttf');
 }
 
 @font-face{
     font-family: 'AvenirBlack';
-    src: url('/fonts/AvenirBlack.ttf');
+    src: url('../../fonts/AvenirBlack.ttf');
 }
 
 @font-face {
     font-family: 'AvenirBook';
-    src: url('/fonts/AvenirBook.ttf');
+    src: url('../../fonts/AvenirBook.ttf');
 }
 //HOME PAGE
 
