--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -70,7 +70,7 @@ body{
 }
 
 #home{
-    background: url('/images/bg-home.jpg') center center no-repeat;
+    background: url('../../images/bg-home.jpg') center center no-repeat;
     background-size: cover;
     color: #8ac9c9;
     .home-content{
@@ -102,7 +102,7 @@ body{
 }
 
 #tools{
-    background: url('/images/bg-work.jpg');
+    background: url('../../images/bg-work.jpg');
     background-size: cover;
     color: #8ac9c9;
     .slide-content{
@@ -171,7 +171,7 @@ body{
 
 //HOW TO PAGE
 #how-to-body{
-    background: url('/images/bg-work.jpg') center center no-repeat;
+    background: url('../../images/bg-work.jpg') center center no-repeat;
     background-size: cover;
     background-attachment: fixed;
 
